<resources>
    <string name="app_name">Diabetic Diary</string>
    <string name="login">Login</string>
    <string name="coffee">Coffee</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="flashlight">Flashlight</string>

    <!--  Login Strings  -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="forgot_password">Forgot your password?</string>

    <!--  Coffee Strings  -->
    <string name="question1">What kind of Coffee?</string>
    <string name="option1_question1">Decaf</string>
    <string name="option2_question1">Espresso</string>
    <string name="option3_question1">Colombian</string>
    <string name="question2">What else do you like in your coffee?</string>
    <string name="option1_question2">Cream</string>
    <string name="option2_question2">Sugar</string>
    <string name="pay_button">Pay</string>

    <!--  Tip Calculator Strings  -->
    <string name="bill_amount">Bill Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_per_person">Total per Person</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="number_of_people">No. of people</string>
    <string name="tip_percent">Tip %</string>
    <string name="initial_value">$0.00</string>
    <string name="bill_amount_description">Enter the bill amount</string>
    <string name="tip_percentage_description">Enter the tip percentage</string>
    <string name="number_of_people_description">Enter the number of people</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>