<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CoffeeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/question1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/option1_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:text="@string/option1_question1" />

            <RadioButton
                android:id="@+id/option2_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:text="@string/option2_question1" />

            <RadioButton
                android:id="@+id/option3_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:text="@string/option3_question1" />

        </RadioGroup>


        <TextView
            android:id="@+id/question2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/question2" />


        <CheckBox
            android:id="@+id/option1_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:text="@string/option1_question2" />

        <CheckBox
            android:id="@+id/option2_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:text="@string/option2_question2" />

        <Button
            android:id="@+id/pay_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/pay_button" />

    </LinearLayout>

</FrameLayout>