<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TipCalculatorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">
        <LinearLayout
            android:id="@+id/billAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/billAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="18sp"
                android:text="@string/bill_amount"/>

            <EditText
                android:id="@+id/billAmountEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:contentDescription="@string/bill_amount_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tipPercentageLayout"
            android:layout_below="@+id/billAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipPercentageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="18sp"
                android:text="@string/tip_percent"/>

            <EditText
                android:id="@+id/tipPercentEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:contentDescription="@string/tip_percentage_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberOfPeopleLayout"
            android:layout_below="@+id/tipPercentageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numberOfPeopleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="18sp"
                android:text="@string/number_of_people"/>

            <EditText
                android:id="@+id/numberOfPeopleEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:contentDescription="@string/number_of_people_description" />

        </LinearLayout>

        <Button
            android:id="@+id/calculateTipButton"
            android:layout_below="@+id/numberOfPeopleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/calculate_tip" />

        <LinearLayout
            android:id="@+id/billAmountResultLayout"
            android:layout_below="@+id/calculateTipButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/billAmountResultTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:text="@string/bill_amount"/>

            <TextView
                android:id="@+id/billAmountResultValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/initial_value" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalAmountLayout"
            android:layout_below="@id/billAmountResultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:text="@string/total_amount"/>

            <TextView
                android:id="@+id/totalAmountValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/initial_value" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalPerPersonLayout"
            android:layout_below="@id/totalAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalPerPersonTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:text="@string/total_per_person"/>

            <TextView
                android:id="@+id/totalPerPersonValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/initial_value" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>